manifests/kier-dev/common.yaml
# Anything not related to any particular app. Currently it's just the namespace definition.

apiVersion: v1
kind: Namespace
metadata:
  name: kier-dev
