manifests/kier-dev/helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: kier-dev
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - name: helloworld
        image: kierdavis/helloworld:latest
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: kier-dev
  labels:
    app: helloworld
spec:
  selector:
    app: helloworld
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: kier-dev
  labels:
    app: helloworld
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: helloworld.kierdavis.com
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: http
