manifests/kier-dev/wiki.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: kier-dev
  labels:
    app: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - name: wiki
        image: adtac/gollum-alpine:latest
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /wiki
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wiki-data

---

apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: kier-dev
  labels:
    app: wiki
spec:
  selector:
    app: wiki
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wiki
  namespace: kier-dev
  labels:
    app: wiki
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: wiki.dev.kierdavis.com
    http:
      paths:
      - backend:
          serviceName: wiki
          servicePort: http
